--- a/ESP32-Central/platformio.ini
+++ b/ESP32-Central/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp01]
-platform = espressif8266
-board = esp01
-framework = esp8266-rtos-sdk
-lib_deps = knolleary/PubSubClient@^2.8
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+lib_deps = knolleary/PubSubClient@^2.8.0
